welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: not found: value getIndication
	if(getIndication() == 'A')
           ^BDRBuggle:6: error: not found: value getIndication
	else if(getIndication() == 'Z')
                ^BDRBuggle:8: error: not found: value getIndication
	else if(getIndication() == 'L')
                ^BDRBuggle:13: error: not found: value getIndication
	else if(getIndication() == 'B')
                ^BDRBuggle:18: error: not found: value getIndication
	else if(getIndication() == 'R')
                ^BDRBuggle:23: error: not found: value getIndication
	else if(getIndication() == 'X')
                ^BDRBuggle:29: error: not found: value getIndication
	else if(getIndication() == 'I')
                ^